# minimax-claude-statusline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TEST.md  pyproject.toml
.github/workflows/: ci.yml
src/minimax_statusline/: __init__.py  check_usage.py  cli.py  statusline.py
